--- a/wos_pub_frequencies.Rmd
+++ b/wos_pub_frequencies.Rmd
@@ -11,14 +11,15 @@ output:
 ```{r setup}
 library(data.table)
 library(ggplot2)
+library(here)
 
 # Web of Science citations
-wosgenetics <- fread('data/web_of_science/WoS_2022-10-18_population_genetics_coral.txt', quote = "") # "population genetics" & "coral" in Topic
-wosgenomics <- fread('data/web_of_science/WoS_2022-10-18_population_genomics_coral.txt', quote = "") # population genomics & coral in Topic
+wosgenetics <- fread(here('data', 'web_of_science', 'WoS_2022-10-18_population_genetics_coral.txt'), quote = "") # "population genetics" & "coral" in Topic
+wosgenomics <- fread(here('data', 'web_of_science', 'WoS_2022-10-18_population_genomics_coral.txt'), quote = "") # population genomics & coral in Topic
 for(i in 1:25){
-    if(i ==1) wosall <- fread('data/web_of_science/WoS_2022-10-18_population_genomics_1.txt', quote = "") # "population genomics" in Topic, tranch 1
+    if(i ==1) wosall <- fread(here('data', 'web_of_science', 'WoS_2022-10-18_population_genomics_1.txt'), quote = "") # "population genomics" in Topic, tranch 1
     if(i>1){
-        temp <-fread(paste0('data/web_of_science/WoS_2020-10-18_population_genomics_', i, '.txt', quote = "")) # pop genomics in Topic, tranch i 
+        temp <-fread(here('data', 'web_of_science', paste0('WoS_2020-10-18_population_genomics_', i, '.txt')), quote = "") # pop genomics in Topic, tranch i 
         wosall <- rbind(wosall, temp)
     }
 }
@@ -51,11 +52,12 @@ ggplot(sum[class =='genomics'], aes(PY, fpubs, color = class, group = class)) +
 ```{r}
 ggplot(sum, aes(PY, cumpubs, color = class)) +
     geom_line()+
+    labs(x = 'Publication year', y = 'Cumulative publications', color = 'Topic') +
     theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
           panel.background = element_blank(), axis.line = element_line(colour = "black"),
           legend.key=element_blank(),
-          axis.text=element_text(size=8),
-          axis.title=element_text(size=8))
+          axis.text=element_text(size=10),
+          axis.title=element_text(size=12))
 
 ggsave('figures/fig1.png', width=5, height=2.5, units = 'in')
 ```
